Refactored members to users. Minor defects fixed.

--- a/src/main/webapp/resources/css/screen.css
+++ b/src/main/webapp/resources/css/screen.css
@@ -95,7 +95,7 @@ h5 {
 }
 h6 {
 }
-/* Member registration styles */
+/* User registration styles */
 span.invalid {
   padding-left: 3px;
   color: red;
