--- a/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -40,11 +40,8 @@
         <div id="aside">
             <p>Learn more about JBoss WildFly.</p>
             <ul>
-                <li><a
-                    href="https://github.com/wildfly/quickstart/blob/master/guide/Introduction.asciidoc">Getting
-                        Started Developing Applications Guide</a></li>
-                <li><a href="http://www.wildfly.org/">Community
-                        Project Information</a></li>
+                <li><a href="https://github.com/wildfly/quickstart/blob/master/guide/Introduction.asciidoc">Getting Started Developing Applications Guide</a></li>
+                <li><a href="http://www.wildfly.org/">Community Project Information</a></li>
             </ul>
         </div>
         <div id="footer">
